welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:21: error: Invalid literal number
	for (compteur <- 1to 6){
                         ^Program:-14: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-12: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:-8: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^Program:21: error: Invalid literal number
	for (compteur <- 1to 6){
                         ^Program:21: error: illegal start of simple expression
	for (compteur <- 1to 6){
                         ^Program:32: error: ')' expected but '}' found.
  }
  ^